--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sorting Algorithm Visualizer</title>
     <link rel="stylesheet" type="text/css" href="style.css">
-    <script src="app.js" defer></script>
+    <script type = "module" defer src="app.js"></script>
 </head>
 <body>
     <div id="visualization-container">
