--- a/index.html
+++ b/index.html
@@ -63,6 +63,16 @@
             <div class="element"></div>
             <div class="element"></div>
         </div>
+        <div id=buttonContainer>
+            <button type="button" onclick="bsv();">Bubble Sort</button>
+            <button type="button" onclick="ssv();">Selection Sort</button>
+            <button type="button" onclick="isv();">Insertion Sort</button>
+            <button type="button" onclick="msv();">Merge Sort</button>
+        </div>
+    </div>
+    <div id="log-container">
+        <h2 id="log-header">Log</h2>
+        <div id="logs"></div>
     </div>
 </body>
 </html>
