Added speed parameter to visualizer algorithms

--- a/index.html
+++ b/index.html
@@ -64,6 +64,8 @@
             <div class="element"></div>
         </div>
         <div id=buttonContainer>
+            <label for=speed alt="Time between color shifts">Speed (in milliseconds)</label>
+            <input id="speed" type=text>
             <button type="button" onclick="bsv();">Bubble Sort</button>
             <button type="button" onclick="ssv();">Selection Sort</button>
             <button type="button" onclick="isv();">Insertion Sort</button>
