Added subroutines to disable all the buttons until the current running script is done and updated the UI

--- a/index.html
+++ b/index.html
@@ -66,10 +66,10 @@
         <div id=buttonContainer>
             <label for=speed alt="Time between color shifts">Speed (in milliseconds)</label>
             <input id="speed" type=text>
-            <button type="button" onclick="bsv();">Bubble Sort</button>
-            <button type="button" onclick="ssv();">Selection Sort</button>
-            <button type="button" onclick="isv();">Insertion Sort</button>
-            <button type="button" onclick="msv();">Merge Sort</button>
+            <button class="sort-button" type="button" onclick="bsv();">Bubble Sort</button>
+            <button class="sort-button" type="button" onclick="ssv();">Selection Sort</button>
+            <button class="sort-button" type="button" onclick="isv();">Insertion Sort</button>
+            <button class="sort-button" type="button" onclick="msv();">Merge Sort</button>
         </div>
     </div>
     <div id="log-container">
